refactor: impl de pagos para redireccion